*****************************************************************************************************
digiKam 5.5.0 - Release date: 2017-03-12

NEW FEATURES:
Database : We introduced garbage collection for databases as maintenance stage. This stage removes stale image,
           thumbnail and face entries gut does not shrink Databases automatically.
Faces    : It is now possible to remove face tags from people sidebar but preserve them in tags sidebar.
Faces    : Recognised but unconfirmed faces are now visible both in the recognised face tag and also in a special tag called Unconfirmed.
Faces    : The list of proposed names for hame assigment in people sidebar can now be reduced to face tags with a setup option.
Searches : Improved the exactness of similarity recognition for external images dropped in fuzzy search.
Searches : Introduced a configurable lower bound for the minimum similarity in fuzzy and duplicates search.
Tags     : Tags in tags sidebar can now be marked as face tags via context menu if they are not already.

BUGFIXES FROM BUGZILLA:

001 ==> 374787 : Release Notes are difficult to read because of color choices.
002 ==> 374784 - Startup wizard displays path to album with forward slashes.
003 ==> 374771 - Thumbnails for video files are gray.
004 ==> 366010 - Main menu bar is not translated (localized).
005 ==> 328321 - Image orientation is not maintained when processing RAW image through BQM.
006 ==> 374922 - digiKam crashes when dropping ext. image into fuzzy search target area.
007 ==> 375019 - Error updating scheme from digikam 4.
008 ==> 311652 - THUMBBAR : wrong items selection with shift key.
009 ==> 374671 - Breeze Icons missing dark icons.
010 ==> 375107 - Deleting a tag with 0 images from Tag Manager generates incorrect dialog - missing tag name.
011 ==> 375142 - The similarity calculated for the fuzzy image drop search is imprecise.
012 ==> 336253 - Create a New tag, Unconfirmed Faces [patch].